new file:   .github/workflows/czy_afternoon.yaml 	new file:   .github/workflows/czy_evening.yaml 	new file:   .github/workflows/czy_morning.yaml 	new file:   .github/workflows/dfl_afternoon.yaml 	new file:   .github/workflows/dfl_evening.yaml 	new file:   .github/workflows/dfl_morning.yaml 	new file:   .github/workflows/fjy_afternoon.yaml 	new file:   .github/workflows/fjy_evening.yaml 	new file:   .github/workflows/fjy_morning.yaml 	modified:   .github/workflows/lgy_afternoon.yaml 	modified:   .github/workflows/lgy_evening.yaml 	modified:   .github/workflows/lgy_morning.yaml 	modified:   README.md

--- a/.github/workflows/fjy_afternoon.yaml
+++ b/.github/workflows/fjy_afternoon.yaml
@@ -1,4 +1,4 @@
-name: LGY_Afternoon Exercise
+name: FJY_Afternoon Exercise
 
 on:
   schedule:
@@ -21,5 +21,5 @@ jobs:
       - name: Run app
         run: python main.py -r 33 -d 1200 -t 360
         env:
-          USER_ID: ${{ secrets.LGY_ID }}
-          FUDAN_SPORT_TOKEN: ${{ secrets.LGY_TOKEN }}
+          USER_ID: ${{ secrets.FJY_ID }}
+          FUDAN_SPORT_TOKEN: ${{ secrets.FJY_TOKEN }}
