--- a/.github/workflows/dfl_morning.yaml
+++ b/.github/workflows/dfl_morning.yaml
@@ -1,8 +1,8 @@
-name: LGY_Afternoon Exercise
+name: lgy_Morning Exercise
 
 on:
   schedule:
-    - cron: '00 08 * * 0-6'
+    - cron: '50 22 * * 0-4'
   workflow_dispatch:
 
 jobs:
@@ -19,7 +19,7 @@ jobs:
       - name: Prepare environment
         run: pip install -r requirements.txt
       - name: Run app
-        run: python main.py -r 33 -d 1200 -t 360
+        run: python main.py -r 28 -d 1200 -t 420
         env:
-          USER_ID: ${{ secrets.LGY_ID }}
-          FUDAN_SPORT_TOKEN: ${{ secrets.LGY_TOKEN }}
+          USER_ID: ${{ secrets.DFL_ID }}
+          FUDAN_SPORT_TOKEN: ${{ secrets.DFL_TOKEN }}
