--- a/.github/workflows/lgy_morning.yaml
+++ b/.github/workflows/lgy_morning.yaml
@@ -1,4 +1,4 @@
-name: lgy_Morning Exercise
+name: LGY_Morning Exercise
 
 on:
   schedule:
@@ -21,5 +21,5 @@ jobs:
       - name: Run app
         run: python main.py -r 28 -d 1200 -t 420
         env:
-          USER_ID: ${{ secrets.USER_ID }}
-          FUDAN_SPORT_TOKEN: ${{ secrets.FUDAN_SPORT_TOKEN }}
+          USER_ID: ${{ secrets.LGY_ID }}
+          FUDAN_SPORT_TOKEN: ${{ secrets.LGY_TOKEN }}
