--- a/.github/workflows/lyy_afternoon.yaml
+++ b/.github/workflows/lyy_afternoon.yaml
@@ -1,4 +1,4 @@
-name: czy_Afternoon Exercise
+name: lyy_Afternoon Exercise
 
 on:
   schedule:
@@ -21,5 +21,5 @@ jobs:
       - name: Run app
         run: python main.py -r 33 -d 1200 -t 360
         env:
-          USER_ID: ${{ secrets.CZY_ID }}
-          FUDAN_SPORT_TOKEN: ${{ secrets.CZY_TOKEN }}
+          USER_ID: ${{ secrets.LYY_ID }}
+          FUDAN_SPORT_TOKEN: ${{ secrets.LYY_TOKEN }}
