renamed:    .github/workflows/lyy_afternoon.yaml -> .github/workflows/czy2_afternoon.yaml 	renamed:    .github/workflows/lyy_evening.yaml -> .github/workflows/czy2_evening.yaml 	renamed:    .github/workflows/lyy_morning.yaml -> .github/workflows/czy2_morning.yaml

--- a/.github/workflows/czy2_evening.yaml
+++ b/.github/workflows/czy2_evening.yaml
@@ -1,8 +1,8 @@
-name: lyy_Afternoon Exercise
+name: czy2_Evening Exercise
 
 on:
   schedule:
-    - cron: '00 08 * * 0-6'
+    - cron: '00 12 * * 0-6'
   workflow_dispatch:
 
 jobs:
@@ -19,7 +19,7 @@ jobs:
       - name: Prepare environment
         run: pip install -r requirements.txt
       - name: Run app
-        run: python main.py -r 33 -d 1200 -t 360
+        run: python main.py -r 38 -d 1200 -t 360
         env:
           USER_ID: ${{ secrets.LYY_ID }}
           FUDAN_SPORT_TOKEN: ${{ secrets.LYY_TOKEN }}
