--- a/.github/workflows/czy2_evening.yaml
+++ b/.github/workflows/czy2_evening.yaml
@@ -21,5 +21,5 @@ jobs:
       - name: Run app
         run: python main.py -r 38 -d 1200 -t 360
         env:
-          USER_ID: ${{ secrets.LYY_ID }}
-          FUDAN_SPORT_TOKEN: ${{ secrets.LYY_TOKEN }}
+          USER_ID: ${{ secrets.CZY2_ID }}
+          FUDAN_SPORT_TOKEN: ${{ secrets.CZY2_TOKEN }}
