modified:   .github/workflows/czy2_afternoon.yaml 	modified:   .github/workflows/czy2_evening.yaml 	modified:   .github/workflows/czy2_morning.yaml 	modified:   .github/workflows/czy_afternoon.yaml 	modified:   .github/workflows/czy_evening.yaml 	modified:   .github/workflows/czy_morning.yaml 	modified:   .github/workflows/lgy_afternoon.yaml 	modified:   .github/workflows/lgy_evening.yaml 	modified:   .github/workflows/lgy_morning.yaml

--- a/.github/workflows/czy_afternoon.yaml
+++ b/.github/workflows/czy_afternoon.yaml
@@ -2,7 +2,7 @@ name: czy_Afternoon Exercise
 
 on:
   schedule:
-    - cron: '00 08 * * 0-6'
+    #- cron: '00 08 * * 0-6'
   workflow_dispatch:
 
 jobs:
