--- a/.github/workflows/czy2_afternoon.yaml
+++ b/.github/workflows/czy2_afternoon.yaml
@@ -2,7 +2,7 @@ name: czy2_Afternoon Exercise
 
 on:
   schedule:
-    - cron: '00 08 * * 0-6'
+    #- cron: '00 08 * * 0-6'
   workflow_dispatch:
 
 jobs:
