--- a/.github/workflows/czy2_morning.yaml
+++ b/.github/workflows/czy2_morning.yaml
@@ -2,7 +2,7 @@ name: czy2_Morning Exercise
 
 on:
   schedule:
-    - cron: '50 22 * * 0-6'
+    #- cron: '50 22 * * 0-6'
   workflow_dispatch:
 
 jobs:
