--- a/.github/workflows/lgy_evening.yaml
+++ b/.github/workflows/lgy_evening.yaml
@@ -2,7 +2,7 @@ name: lgy_Evening Exercise
 
 on:
   schedule:
-    - cron: '00 12 * * 0-6'
+    #- cron: '00 12 * * 0-6'
   workflow_dispatch:
 
 jobs:
